objects/Quota_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Amount_for_Apr__c</fullName>
        <label>Amount for Apr</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Aug__c</fullName>
        <label>Amount for Aug</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Dec__c</fullName>
        <label>Amount for Dec</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Feb__c</fullName>
        <label>Amount for Feb</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Jan__c</fullName>
        <label>Amount for Jan</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_July__c</fullName>
        <label>Amount for July</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_June__c</fullName>
        <label>Amount for June</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Mar__c</fullName>
        <label>Amount for Mar</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_May__c</fullName>
        <label>Amount for May</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Nov__c</fullName>
        <label>Amount for Nov</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Oct__c</fullName>
        <label>Amount for Oct</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Sept__c</fullName>
        <label>Amount for Sept</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Manager_Email__c</fullName>
        <label>Direct Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Apporved_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether New Quota is Approved...</description>
        <label>Is Apporved New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Changes in Quota Allocation and New Amount is Approved</description>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Existing_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Changes in Quota Allocation and New Amount is Rejected</description>
        <label>Is Existing Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approved_By__c</fullName>
        <label>Last Approved By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Apr__c</fullName>
        <label>Old Amount for Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Aug__c</fullName>
        <label>Old Amount for Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Dec__c</fullName>
        <label>Old Amount for Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Feb__c</fullName>
        <label>Old Amount for Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Jan__c</fullName>
        <label>Old Amount for Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_July__c</fullName>
        <label>Old Amount for July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_June__c</fullName>
        <label>Old Amount for June</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Mar__c</fullName>
        <label>Old Amount for Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_May__c</fullName>
        <label>Old Amount for May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Nov__c</fullName>
        <label>Old Amount for Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Oct__c</fullName>
        <label>Old Amount for Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Amount_for_Sept__c</fullName>
        <label>Old Amount for Sept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Team__c</fullName>
        <label>Product / Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quota Type</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6 AND 7)</booleanFilter>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>contains</operation>
                <value>Pre Sales</value>
            </filterItems>
            <filterItems>
                <field>Quota__c.Role__c</field>
                <operation>equals</operation>
                <value>PS</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>contains</operation>
                <value>Direct Sales</value>
            </filterItems>
            <filterItems>
                <field>Quota__c.Role__c</field>
                <operation>equals</operation>
                <value>DS</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>startsWith</operation>
                <value>AM</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>notContain</operation>
                <value>Pre Sales</value>
            </filterItems>
            <filterItems>
                <field>Quota__c.Role__c</field>
                <operation>equals</operation>
                <value>AM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quota__c</referenceTo>
        <relationshipLabel>Quota Allocations</relationshipLabel>
        <relationshipName>Quota_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Role__c</fullName>
        <formula>Quota_Type__r.SF_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Members__c</fullName>
        <label>Sales Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <description>Email of Submitter who changes Quota amounts</description>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quota_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_SVP_Email__c</fullName>
        <description>Contains Email of VP and SVP of Product.</description>
        <label>VP / SVP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                    <default>true</default>
                    <label>2016</label>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quota Allocation</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Quota Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Quota_Type__c</columns>
        <columns>Sales_Team_Members__c</columns>
        <columns>Product_Team__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>Michael Bickerton</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>